--- a/src/app/test/test.component.html
+++ b/src/app/test/test.component.html
@@ -4,3 +4,6 @@
 <div *ngFor="let empObj of empData;index as i">
     <h1>{{i+1}} {{empObj.name}} {{empObj.age}} {{empObj.sal}}</h1>
 </div>
+<div>
+    <h2>Wait there</h2>
+</div>
